--- a/uart.build_log.htm
+++ b/uart.build_log.htm
@@ -7,3 +7,6 @@ C:\Users\zashr\OneDrive\Desktop\Embedded\Keil Projects\UART_test\UART\uart.uvpro
 Project File Date:  06/09/2021
 
 <h2>Output:</h2>
+</pre>
+</body>
+</html>
